# csv_ms_lector

./: .env  alembic.ini  main.py  pyproject.toml
csv_ms_lector/domain/models/: auxiliar_models.py  cliente.py  inventario.py  producto.py  sucursal.py
csv_ms_lector/infraestructure/persistence/: postgres_connection.py
csv_ms_lector/infraestructure/persistence/alembic/: env.py
csv_ms_lector/infraestructure/persistence/alembic/versions/: 7ef6e85e2563_tables_realationships_v1.py  f6ed1b930468_.py
tests/: test_csv_ms_lector.py
